--- a/src/views/GameColors/GameColors.module.css
+++ b/src/views/GameColors/GameColors.module.css
@@ -1,7 +1,8 @@
 .gameContainer {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: auto;
+  overflow-y: auto;
   align-items: center;
   justify-content: space-around;
   gap: 32px;
