--- a/src/views/GameCounting/GameCounting.module.css
+++ b/src/views/GameCounting/GameCounting.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: auto;
+  overflow-y: auto;
   align-items: center;
   justify-content: space-around;
   gap: 20px;
